listings/ch17-async-await/listing-17-19/output.txt
$ cargo build
   Compiling async_await v0.1.0 (/Users/chris/dev/rust-lang/book/listings/ch17-async-await/no-listing-type-mismatch)
error[E0308]: mismatched types
 --> src/main.rs:5:24
  |
5 |     let vals = vec![a, b];
  |                        ^ expected integer, found `&str`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `async_await` (bin "async_await") due to 1 previous error
